fix alignment

--- a/src/components/cards/cards.module.scss
+++ b/src/components/cards/cards.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-    height: 90%;
+    height: 95%;
 }
 
 .divider {
